RG-2428 Select: do not shrink avatar when the username is long (#9162)

--- a/src/tag/tag.css
+++ b/src/tag/tag.css
@@ -196,6 +196,7 @@
 .avatarContainer {
   display: inline-block;
   overflow: hidden;
+  flex-shrink: 0;
 
   box-sizing: border-box;
   width: var(--ring-tag-max-height);
